<resources>
    <string name="app_name">Mlink</string>
    <string name="mentor_login">Mentor Login</string>
    <string name="mentee_login">Mentee Login</string>
    <string name="username">Username/Phone/Email</string>
    <string name="password">Password</string>
    <string name="login">Signin</string>
    <string name="register">Create New Acccount</string>
    <string-array name="action_bar_spinner_select_login">
        <item>Mentor</item>
        <item>Mentee</item>
    </string-array>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailorPhone">Email/Phone</string>
    <string name="PasswordReg">Enter Password</string>
    <string name="ConfirmPasswordReg">Enter Confirm Password</string>
</resources>