<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="@string/FirstName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/LastName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/emailorphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/emailorphone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/EmailorPhone"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/PasswordReg"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmpasswordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailorphone" />

    <EditText
        android:id="@+id/confirmpasswordReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/ConfirmPasswordReg"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/action_bar_spinner_select_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg" />

    <Spinner
        android:id="@+id/action_bar_spinner_select_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/RegisterinReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpasswordReg" />

    <Button
        android:id="@+id/RegisterinReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/light_blue_600"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_spinner_select_register"
        app:layout_constraintVertical_bias="0.146" />
</androidx.constraintlayout.widget.ConstraintLayout>